[tool.poetry]
name = "some"
version = "0.1.0"
description = ""
authors = ["vkh <vl@d.d>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.3"
fastapi = "^0.115.6"
asyncpg = "^0.30.0"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
greenlet = "^3.1.1"
init-data-py = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
